--- a/paystatsappservice/src/main/resources/application.properties
+++ b/paystatsappservice/src/main/resources/application.properties
@@ -2,9 +2,12 @@ server.port = 7777
 
 #database configuration
 spring.datasource.url= jdbc:mysql://localhost:3306/paystats
+#spring.datasource.url= jdbc:mysql://apptest.clceki8hiyty.ap-south-1.rds.amazonaws.com:3306/paystats
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=password
+#spring.datasource.username=admin	
+#spring.datasource.password=mmsir9876
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
