Changing naming convention & new api endpoint for payment
Changed names of pkgs/classes etc. to be more uniform. Tried implemting add and get All apis for Payment.

--- a/paystatsappservice/src/main/resources/application.properties
+++ b/paystatsappservice/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.datasource.password=
 #spring.datasource.password=abcd
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#Here, we changed the dialect from 5 to 8 to remove engine=MyISAM issue
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
